simple/test/features/errors/semantic/e1024_const_eval_failed.spl
# E1024: Const Eval Failed

Feature: E1024 - Constant Evaluation Failed
  As a Simple compiler
  I want to detect expressions that cannot be evaluated at compile time
  So that const contexts only contain compile-time computable values

  Background:
    Given I have the Simple compiler

  Scenario: Non-const function call in const
    When I compile:
      '''
      fn get_random() -> i32:
        42  # Non-const function

      val CONST_VALUE: i32 = get_random()  # Error: not const
      '''
    Then I should see error E1024 at line 4
    And the error message should be "constant evaluation failed: {message}"
    And the label should indicate "cannot evaluate at compile time"
    And the help should suggest "only const-compatible expressions can be used in const context"

  Scenario: Variable reference in const
    When I compile:
      '''
      fn test():
        var x = 10
        val CONST: i32 = x  # Error: x is not const
      '''
    Then I should see error E1024

  Scenario: Division by zero in const
    When I compile:
      '''
      val INVALID: i32 = 10 / 0  # Error: division by zero at compile time
      '''
    Then I should see error E1024 or E3001

  Scenario: Overflow in const expression
    When I compile:
      '''
      val MAX_I32: i32 = 2147483647
      val OVERFLOW: i32 = MAX_I32 + 1  # Error: overflow
      '''
    Then I should see error E1024

  Scenario: Valid const arithmetic
    When I compile:
      '''
      val PI: f64 = 3.14159
      val TAU: f64 = PI * 2.0  # OK: const expression
      val ANSWER: i32 = 40 + 2  # OK: const arithmetic
      '''
    Then compilation should succeed

  Scenario: Valid const with literals
    When I compile:
      '''
      val MESSAGE: str = "Hello, world!"
      val COUNT: i32 = 100
      val ENABLED: bool = true
      '''
    Then compilation should succeed

  Scenario: Const function (if supported)
    When I compile:
      '''
      const fn double(x: i32) -> i32:
        x * 2

      val RESULT: i32 = double(21)  # OK if const fn supported
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn get_value() -> i32:
        42

      val CONST: i32 = get_value()
      '''
    Then I should see error E1024
    And the error message should contain "상수 평가 실패"
